# swarm

./: LICENSE  pyproject.toml  swarm-build-plan.md  swarm.json  swarm.py
tests/: conftest.py  test_config.py  test_git.py  test_output.py  test_state.py  test_watcher.py
