[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swarm"
version = "0.1.0"
description = "A generic git worktree watcher for multi-agent development workflows"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

